feat(courses):added photo changing in update query
